# vscode-django

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  Makefile  README.md  language-configuration.json  package.json  pyproject.toml  vsc-extension-quickstart.md  webpack.config.js
.github/: FUNDING.yml
completions/snippets/admin/: classes.toml  imports.toml  options.toml
completions/snippets/forms/: classes.toml  (+4 more)
first_proj/: header.py
snippets/: django-template-snippets-gen.json  django-template-snippets.json  generate.py  template.toml
snippets/admin/: classes.json  imports.json  options.json
snippets/forms/: classes.json  fields.json  imports.json  methods.json
snippets/models/: classes.json  fields.json  imports.json  methods.json
snippets/templates/: filters.json  html.json  methods.json  tags.json
snippets/urls/: imports.json  methods.json  regexes.json
snippets/views/: classes.json  imports.json  methods.json
src/: constants.ts  extension.ts  htmlPatchSettings.ts  utils.ts
src/completions/: base.ts  completionItemProvider.ts
src/formatting /: documentFormattingEditProvider.ts  formatter.ts
src/providers/: definitionProvider.ts
syntaxes/: build.py  django-html.tmLanguage.json  django-html.toml  django-repo.json  django-repo.toml  django-txt.tmLanguage.json  django-txt.toml
syntaxes/repositories/: django-stuff.toml  django-template-filter.toml  django-template-tag-contrib.toml  django-template-tag.toml  entities.toml  string-double-quoted.toml  string-single-quoted.toml  tag-generic-attribute.toml  tag-id-attribute.toml  tag-stuff.toml
(+17 files in other folders)
