[tool.poetry]
name = "vscode_django"
version = "1.0.0"
description = "CLI helpers for the vscode extension"
authors = ["Baptiste Darthenay <baptiste.darthenay@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4"
tomlkit = "^0.12.1"

[tool.poetry.dev-dependencies]
toml = "*"
tomlkit = "*"
bpython = "*"

[tool.poetry.scripts]
syntax = "syntaxes.build:main"
